--- a/promptfooconfig.yaml
+++ b/promptfooconfig.yaml
@@ -25,5 +25,6 @@ tests:
       question: What is true for a type-Ia ("type one-a") supernova? (A) This type occurs in binary systems. (B) This type occurs in young galaxies. (C) This type produces gamma-ray bursts. (D) This type produces high amounts of X-rays.
 
     assert:
-      - type: contains
-        value: (A)
+      - type: llm-rubric
+        value: Identifies answer as (A)
+        provider: openai:gpt-4o-mini
